--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,31 +6,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body>
-    <h1>Communicating from Node.js to an Arduino</h1>
+<img>
+<div>Teachable Machine Image Model</div>
+<button type="button" onclick="init()">Start</button>
 
-    <button id="lightOn">Turn Light On</button>
-    <button id="lightOff">Turn Light Off</button>
+<div id="webcam-container"></div>
+<div id="label-container"></div>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+<script type="text/javascript">
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
-    <script>
+    // the link to your model provided by Teachable Machine export panel
+    const URL = "https://teachablemachine.withgoogle.com/models/nfhhoQ6Jk/";
 
-        var socket = io();
+    let model, webcam, labelContainer, maxPredictions, snapData, webcamContainer, isSnap;
+    var socketIo = io();
+    // Load the image model and setup the webcam
+    async function init() {
+        const modelURL = URL + "model.json";
+        const metadataURL = URL + "metadata.json";
 
-        document.getElementById('lightOn').onclick = function () {
+        webcamContainer = document.getElementById("webcam-container");
+        // load the model and metadata
+        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+        // or files from your local hard drive
+        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+        model = await tmImage.load(modelURL, metadataURL);
+        maxPredictions = model.getTotalClasses();
 
-            socket.emit('lights', { "status": "1" });
+        // Convenience function to setup a webcam
+        const flip = true; // whether to flip the webcam
+        webcam = new tmImage.Webcam(700, 500, flip); // width, height, flip
+        await webcam.setup(); // request access to the webcam
+        await webcam.play();
 
-        };
+        window.requestAnimationFrame(loop);
 
-        document.getElementById('lightOff').onclick = function () {
+        // append elements to the DOM
+        document.getElementById("webcam-container").appendChild(webcam.canvas);
+        labelContainer = document.getElementById("label-container");
+        for (let i = 0; i < maxPredictions; i++) { // and class labels
+            labelContainer.appendChild(document.createElement("div"));
+        }
+    }
 
-            socket.emit('lights', { "status": "0" });
+    function capture() {
+        const captureElement = document.getElementById('webcam-container') // Select the element you want to capture. Select the <body> element to capture full page.
+        html2canvas(captureElement)
+            .then(canvas => {
+                canvas.style.display = 'none'
+                const image = canvas.toDataURL('image/png')
+                socketIo.emit('lights', { result: image })
+            })
+    }
 
-        };
+    async function loop() {
+        webcam.update(); // update the webcam frame
+        await predict();
+        window.requestAnimationFrame(loop);
+    }
 
-    </script>
+    // run the webcam image through the image model
+    async function predict() {
+        // predict can take in an image, video or canvas html element
+        const prediction = await model.predict(webcam.canvas);
+        if (isSnap == undefined) {
+            console.log(isSnap);
+        }
+        for (let i = 0; i < maxPredictions; i++) {
+            const classPrediction =
+                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+            labelContainer.childNodes[i].innerHTML = classPrediction;
+
+            if (isSnap == undefined) {
+                if (prediction[1].probability.toFixed(0) != 1) {
+                    isSnap = false;
+                } else {
+                    isSnap = true;
+                }
+            }
+
+            if (prediction[1].probability.toFixed(2) == 1 && isSnap) {
+                isSnap = false
+                setTimeout(() => { capture() }, 1000)
+                console.log(isSnap);
+            } else if (prediction[1].probability.toFixed(2) < 0.6 && isSnap == false) {
+                isSnap = true;
+                console.log(isSnap);
+                socketIo.emit('lights', { result: '' })
+            }
+        }
+    }
+</script>
 </body>
 
 </html>
