--- a/index.html
+++ b/index.html
@@ -1,125 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>FaceMask</title>
 
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="/icons/fontawesome-free-6.4.2-web/css/all.css" />
-        <link rel="stylesheet" href="/css/styles.css" />
-    </head>
-    <body>
-        <img />
-        <div class="title">Teachable Machine Image Model</div>
-        <div class="cover-btn">
-            <button class="btn-start" type="button" onclick="init()">
-                START <i class="fa-solid fa-circle-play"></i>
-            </button>
-        </div>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FaceMask</title>
 
-        <div class="loading"><i class="icon-loading fa-solid fa-spinner"></i></div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="/icons/fontawesome-free-6.4.2-web/css/all.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+</head>
 
-        <div class="cover-content">
-            <div id="webcam-container"></div>
-            <div id="label-container"></div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+<body>
+    <img />
+    <div class="title">Hệ thống nhận diện người đeo khẩu trang</div>
+    <div class="cover-btn">
+        <button class="btn-start" type="button" onclick="init()">
+            START <i class="fa-solid fa-circle-play"></i>
+        </button>
+    </div>
 
-        <script type="text/javascript">
-            const loading = document.querySelector('.loading');
-            const content = document.querySelector('.cover-content');
-            // More API functions here:
-            // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+    <div class="loading"><i class="icon-loading fa-solid fa-spinner"></i></div>
 
-            // the link to your model provided by Teachable Machine export panel
-            const URL = 'https://teachablemachine.withgoogle.com/models/nfhhoQ6Jk/';
+    <div class="cover-content">
+        <div id="webcam-container"></div>
+        <div id="label-container"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 
-            let model, webcam, labelContainer, maxPredictions, snapData, webcamContainer, isSnap;
-            var socketIo = io();
-            // Load the image model and setup the webcam
-            async function init() {
-                loading.classList.add('active');
-                const modelURL = URL + 'model.json';
-                const metadataURL = URL + 'metadata.json';
+    <script type="text/javascript">
+        const loading = document.querySelector('.loading');
+        const content = document.querySelector('.cover-content');
+        // More API functions here:
+        // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
-                webcamContainer = document.getElementById('webcam-container');
-                // load the model and metadata
-                // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-                // or files from your local hard drive
-                // Note: the pose library adds "tmImage" object to your window (window.tmImage)
-                model = await tmImage.load(modelURL, metadataURL);
-                maxPredictions = model.getTotalClasses();
+        // the link to your model provided by Teachable Machine export panel
+        const URL = 'https://teachablemachine.withgoogle.com/models/nfhhoQ6Jk/';
 
-                // Convenience function to setup a webcam
-                const flip = true; // whether to flip the webcam
-                webcam = new tmImage.Webcam(700, 500, flip); // width, height, flip
-                await webcam.setup(); // request access to the webcam
-                await webcam.play();
+        let model, webcam, labelContainer, maxPredictions, snapData, webcamContainer, capMask, capNoMask;
+        var socketIo = io();
+        // Load the image model and setup the webcam
+        async function init() {
+            loading.classList.add('active');
+            const modelURL = URL + 'model.json';
+            const metadataURL = URL + 'metadata.json';
 
-                window.requestAnimationFrame(loop);
+            webcamContainer = document.getElementById('webcam-container');
+            // load the model and metadata
+            // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+            // or files from your local hard drive
+            // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+            model = await tmImage.load(modelURL, metadataURL);
+            maxPredictions = model.getTotalClasses();
 
-                // append elements to the DOM
-                document.getElementById('webcam-container').appendChild(webcam.canvas);
-                labelContainer = document.getElementById('label-container');
-                for (let i = 0; i < maxPredictions; i++) {
-                    // and class labels
-                    labelContainer.appendChild(document.createElement('div'));
-                }
-                loading.classList.remove('active');
-                content.classList.add('active');
+            // Convenience function to setup a webcam
+            const flip = true; // whether to flip the webcam
+            webcam = new tmImage.Webcam(700, 500, flip); // width, height, flip
+            await webcam.setup(); // request access to the webcam
+            await webcam.play();
+
+            window.requestAnimationFrame(loop);
+
+            // append elements to the DOM
+            document.getElementById('webcam-container').appendChild(webcam.canvas);
+            labelContainer = document.getElementById('label-container');
+            for (let i = 0; i < maxPredictions; i++) {
+                // and class labels
+                labelContainer.appendChild(document.createElement('div'));
             }
+            loading.classList.remove('active');
+            content.classList.add('active');
+        }
 
-            function capture() {
+        //tag == 0 is no mask
+        //tag == 1 is mask
+        //tag == 2 is no one
+        function capture(tag) {
+            setTimeout(function () {
                 const captureElement = document.getElementById('webcam-container'); // Select the element you want to capture. Select the <body> element to capture full page.
                 html2canvas(captureElement).then((canvas) => {
                     canvas.style.display = 'none';
                     const image = canvas.toDataURL('image/png');
-                    socketIo.emit('lights', { result: image });
+                    socketIo.emit('lights', { result: image, tag: tag });
                 });
-            }
+            }, 600);
 
-            async function loop() {
-                webcam.update(); // update the webcam frame
-                await predict();
-                window.requestAnimationFrame(loop);
-            }
+        }
 
-            // run the webcam image through the image model
-            async function predict() {
-                // predict can take in an image, video or canvas html element
-                const prediction = await model.predict(webcam.canvas);
-                if (isSnap == undefined) {
-                    console.log(isSnap);
-                }
-                for (let i = 0; i < maxPredictions; i++) {
-                    const classPrediction = prediction[i].className + ': ' + prediction[i].probability.toFixed(2);
-                    labelContainer.childNodes[i].innerHTML = classPrediction;
+        async function loop() {
+            webcam.update(); // update the webcam frame
+            await predict();
+            window.requestAnimationFrame(loop);
+        }
 
-                    if (isSnap == undefined) {
-                        if (prediction[1].probability.toFixed(0) != 1) {
-                            isSnap = false;
-                        } else {
-                            isSnap = true;
-                        }
-                    }
+        // run the webcam image through the image model
+        async function predict() {
+            // predict can take in an image, video or canvas html element
+            const prediction = await model.predict(webcam.canvas);
 
-                    if (prediction[1].probability.toFixed(2) == 1 && isSnap) {
-                        isSnap = false;
-                        setTimeout(() => {
-                            capture();
-                        }, 1000);
-                        console.log(isSnap);
-                    } else if (prediction[1].probability.toFixed(2) < 0.6 && isSnap == false) {
-                        isSnap = true;
-                        console.log(isSnap);
-                        socketIo.emit('lights', { result: '' });
+            for (let i = 0; i < maxPredictions; i++) {
+                const classPrediction = prediction[i].className + ': ' + prediction[i].probability.toFixed(2);
+                labelContainer.childNodes[i].innerHTML = classPrediction;
+
+                if (capNoMask == undefined || capMask == undefined) {
+                    if (prediction[0].probability.toFixed(0) == 1) {
+                        capNoMask = true;
+                        capMask = false;
+                    } else if (prediction[1].probability.toFixed(0) == 1) {
+                        capMask = true;
+                        capNoMask = false
+                    } else {
+                        capMask = false;
+                        capNoMask = false
                     }
                 }
+
+                if (prediction[0].probability.toFixed(2) == 1 && capNoMask == true) {
+                    capNoMask = false;
+                    capMask = true;
+                    console.log("no mask");
+                    capture('0');
+                } else if (prediction[1].probability.toFixed(2) == 1 && capMask == true) {
+                    capNoMask = true;
+                    capMask = false;
+                    console.log("mask");
+                    capture('1');
+                } else if (prediction[2].probability.toFixed(2) == 1 && isCapture == false) {
+                    capNoMask = true;
+                    capMask = true;
+                    console.log("no one");
+                    socketIo.emit('lights', { result: '' });
+                }
             }
-        </script>
-    </body>
+        }
+    </script>
+</body>
+
 </html>
